# sentinel5p

./: .gitignore  .markdownlintignore  CHANGELOG.md  CONTRIBUTING.md  README-template.md  README.md  docker_env  environment.yml  requirements-dev.txt  setup.cfg
docker/: Dockerfile  Dockerfile-dev  Dockerfile-script-runner  build  cibuild  console  format  stac  test
docs/: installation_and_basic_usage.ipynb
examples/: S5P_NRTI_L2__AER_AI_20210927T013425_20210927T013925_20496_02_020200_20210927T022058.json  S5P_NRTI_L2__AER_LH_20210828T013709_20210828T014209_20070_02_020200_20210828T031518.json  S5P_NRTI_L2__CLOUD__20210829T002709_20210829T003209_20084_02_020201_20210829T012103.json  S5P_NRTI_L2__CO_____20210326T030109_20210326T030609_17872_01_010400_20210326T033105.json  S5P_NRTI_L2__HCHO___20210804T035103_20210804T035603_19731_02_020201_20210804T045417.json  S5P_NRTI_L2__NO2____20210827T012135_20210827T012635_20056_02_020200_20210827T021525.json  S5P_NRTI_L2__O3_____20210620T004526_20210620T005026_19091_01_020104_20210620T014324.json  S5P_NRTI_L2__SO2____20210717T094237_20210717T094737_19479_02_020201_20210717T114202.json  S5P_OFFL_L2__AER_AI_20190113T011232_20190113T025402_06479_01_010202_20190119T003400.json  S5P_OFFL_L2__AER_AI_20200303T013547_20200303T031717_12367_01_010302_20200306T032414.json  S5P_OFFL_L2__AER_LH_20200303T013547_20200303T031717_12367_01_010302_20200306T053814.json  S5P_OFFL_L2__CH4____20200303T013547_20200303T031717_12367_01_010302_20200306T053811.json  S5P_OFFL_L2__CH4____20210915T130938_20210915T145107_20333_02_020200_20210917T070031.json  (+14 more)
(+42 files in other folders)
