[metadata]
name = stactools-sentinel5p
version = attr: stactools.sentinel5p.__version__
description = Stactools package for Sentinel-5P level 2 Products
long_description = file: README.md
long_description_content_type = text/markdown
author = Chung-Xiang Hong
author_email = chung.horng@sinergise.com
url = https://github.com/stactools-packages/sentinel5p
project_urls =
    Issues = https://github.com/stactools-packages/sentinel5p/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    sentinel
    level 2
    AER_AI
    AER_LH
    CH4___
    CLOUD_
    CO____
    HCHO__
    NO2___
    O3____
    O3_TCL
    SO2___
    NP_BD3
    NP_BD6
    NP_BD7
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1

[options.packages.find]
where = src
